TEST_PROGRAMS/INVALID/04/3.go
package main

func main() {
    //Invalid hex
    var x = 0X 12
    x++ // "use" x
}
